== Tue Nov  3 00:59:45 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Some headers only can appear once, enforce during header parse assignment. <jlindley>
* Convert empty bodies into empty arrays instead of nil. <jlindley>
* Handle blank content dispositions. <jlindley>
* Mention Trec 2005 Spam Corpus in readme <jlindley>
* Add 'rake corpus:verify_all' to allow parse checks in bulk. <jlindley>
* Added handling of multi value parameters, like filename*1*="us-ascii'en'blah" filename*2="bleh" <mikel>
* Added dependency on ActiveSupport 2.3 or higher <mikel>

== Sat Oct 31 11:00:41 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Fixed attachment handling, so mail can find attachment from a content-type,
content-disposition or content-location
* Added content-location field and parser
* Added message.has_attachments? for ActionMailer friendliness
* Added attachment.original_filename for ActionMailer friendliness

== Sat Oct 25 13:38:01 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Birthday, Mail released as a gem... phew