@@ -1,5 +1,6 @@
 == Tue Nov  3 00:59:45 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
+* Tested mail against entire Enron set (2.3gb) and the Trec 2005 set (0.5gb), ~ half a million emails without crashing
 * Some headers only can appear once, enforce during header parse assignment. <jlindley>
 * Convert empty bodies into empty arrays instead of nil. <jlindley>
 * Handle blank content dispositions. <jlindley>
@@ -7,6 +8,12 @@
 * Add 'rake corpus:verify_all' to allow parse checks in bulk. <jlindley>
 * Added handling of multi value parameters, like filename*1*="us-ascii'en'blah" filename*2="bleh" <mikel>
 * Added dependency on ActiveSupport 2.3 or higher <mikel>
+
+== Sun Nov  1 12:00:00 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
+
+* handle OpenSSL::SSL::VERIFY_NONE returning 0 <jlindley>
+* doing Mail.new { content_type [text, plain, { charset => UTF-8 }] } is now 
+  possible (content type accepts an array) <mikel>
 
 == Sat Oct 31 11:00:41 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
